# oncle_lapsim

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  __init__.py  pyproject.toml  requirements.txt
data/lap_data/: readme.md
data/tire_data/: tire_data.md
sim_notebooks/: .mapbox_token  car_cfg_devel.ipynb  cop_analysis.ipynb  damper_playground.ipynb  generate_mmd.ipynb  lapsim_lap.ipynb  lapsim_lap_devel.ipynb  launch_guess.ipynb  sensativity_analysis_example.ipynb  sim_validation.ipynb  stability_regions.ipynb
sim_notebooks/calibration/: charger_analysiser.ipynb  charger_monitor.ipynb  sre6_motec_can1_bms.dbc
sim_notebooks/debugging/: car_data_import.ipynb  las_validation.ipynb  min_optimize_steady_state.ipynb  random.ipynb  sensativity_analysis_test.py  slip_ratio_convergence.ipynb  sss_min_validation.ipynb  test_torch.ipynb  tire_frame_testing.ipynb
sim_notebooks/debugging_calibration/: car_data_import.ipynb  charger_analysiser.ipynb  charger_monitor.ipynb  launch_guess.ipynb  sr_convergence_validation.ipynb
sim_notebooks/lapsim/: cop_analysis.ipynb  lapsim_lap.ipynb  lapsim_lap_devel.ipynb  sensativity_analysis_example.ipynb
sim_notebooks/numerical_validation/: LAS_DB_Interp_Validation.ipynb  LAS_lowspeed_Convergence.ipynb  LAS_solver_validation.ipynb
sim_notebooks/powertrain_analysis/: Motor_equations.md  battery_voltage_drop_calculator.ipynb  motor_currents.ipynb  power_limit.ipynb  power_limit_lut.ipynb
sim_notebooks/side_projects/: beta_logger.ipynb  beta_logger_2.ipynb  smart_tire.ipynb
toolkit/: 2d_multiprocessing_rate_sweep.py  __init__.py  damper_force.py  lltd_testing.py  loading_util.py  mmd.py  mmd_2D_multiprocessing_test.py  mmd_flame_test.py  mmd_multiprocessing_test.py  multi_sim.py  rust_mf_test.py
toolkit/lap/: gps.py  (+10 more)
toolkit/pacejka_rs/: Cargo.toml  pyproject.toml
toolkit/pacejka_rs/src/: lapsim.rs  lib.rs  magic_formula.rs  structs.rs
(+66 files in other folders)
