[package]
name = "pacejka_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "pacejka_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module", "abi3-py311"] }
numpy = "0.20.0"
bincode = "1.3.3"
serde = {version = "1.0", features = ["derive"]}
nalgebra = "0.32.6"